<resources>
    <string name="app_name">Fake Instagram</string>
    <string name="username">Username, email or mobile number</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="create_acc">Create new account</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>