<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login_Activity">

    <!--Instagram logo-->
    <ImageView
        android:id="@+id/insta_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:foregroundGravity="center"
        android:src="@drawable/instagram_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--User input-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Username-->
        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/darker_gray"
            android:textSize="18sp" />

        <!--Password-->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/darker_gray"
            android:textSize="18sp" />

        <!--Login button-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!--Forgot password-->
        <Button
            android:id="@+id/forgot_pass_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/forgot_pass"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <!--Create account-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--Create account button-->
        <Button
            android:id="@+id/create_acc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/create_acc"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!--Meta logo-->
        <ImageView
            android:id="@+id/meta_logo"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/meta_logo" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>